--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,11 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+            <version>5.8.22</version>
+        </dependency>
     </dependencies>
 
     <build>
