--- a/pom.xml
+++ b/pom.xml
@@ -194,17 +194,8 @@
         <finalName>${project.artifactId}</finalName>
         <resources>
             <resource>
-                <directory>src/main/java</directory>
-                <includes>
-                    <include>**/*.xml</include>
-                </includes>
-            </resource>
-            <resource>
                 <directory>src/main/resources</directory>
-                <includes>
-                    <include>*.*</include>
-                    <include>*/*</include>
-                </includes>
+                <filtering>true</filtering>
             </resource>
         </resources>
         <plugins>
@@ -234,10 +225,13 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.2</version>
                 <configuration>
-                    <excludes>
-                        <exclude>*.docx</exclude>
-                        <exclude>META-INF/**</exclude>
-                    </excludes>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.touki.blog.BlogServiceApplication</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
             <plugin>
